# messenger-clone

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  docker.compose.yml  go.work  netlify.toml  package-lock.json  package.json
.github/workflows/: .deploy.yaml
AuthenticationService/: Procfile  db.sqlite3  manage.py  requirements.txt
AuthenticationService/AuthenticationService/: asgi.py  settings.py  urls.py  wsgi.py
AuthenticationService/accounts/: admin.py  models.py  serializers.py  urls.py  viewsets.py
database/: 00_init.sql  Dockerfile  pg_hba.conf
database-replica/: Dockerfile  start.sh
database-replica/manifests/: deployment.oc.yml  service.oc.yml
database/manifests/: deployment.oc.yml  scc.yml  service.oc.yml  volume.oc.yml
database/pgbouncer/: pgbouncer.ini
database/sql/: pg_hba.sh
docs/: ARCHITECTURE.md  DATABASE_SCALING.md  FOREIGN_KEYS.md  INDEX.md  MIGRATIONS.md  PARTITIONING_GUIDE.md  PERFORMANCE_TUNING.md  SHARDING_GUIDE.md
faker/: .gitignore  package-lock.json  package.json  tsconfig.json
loadtest/: Dockerfile  LOADTEST_INSTRUCTIONS.md  Makefile  README.md
modules/proxy/: Cargo.toml  Dockerfile  start.sh
modules/proxy/src/: main.rs
nginx/: Dockerfile  nginx.conf
scripts/: loadtest-create-user.sh  loadtest-env.sh  loadtest-sharded.sh  migrate-shards.sh  partition-shards.sh  tune-postgres.sh
server/: .air.toml  .env  .env.docker  .gitignore  Dockerfile  Makefile  go.mod  go.sum  migration.yml  package.json
web/: .env  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  package-lock.json  package.json
(+571 files in other folders)
