[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
pingora = { version = "0.3", features = [ "lb" ] }
tokio = { version = "1.0", features = ["full"] }  # Required for async main
pingora-core = "0.3"
pingora-load-balancing = "0.3"
pingora-proxy = "0.3"
env_logger = "0.11.8"
log = "0.4.27"
http = "1.3.1"

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }

[dev-dependencies]
bacon = "2.1"  # Better alternative to cargo-watch
